--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,10 @@
   "license": "ISC",
   "author": "vinay kotiya",
   "type": "commonjs",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "axios": "^1.8.3",
